<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_detail"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="4dp"
    android:background="@color/light_grey"
    app:layout_collapseMode="pin"

    tools:showIn="@layout/fragment_race_detail">

    <ImageView
        android:id="@+id/image_flag"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/location_flag"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_popup_sync" />

    <TextView
        android:id="@+id/text_label_fp1_date"
        style="@style/word_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/fp1"
        android:textAppearance="?attr/textAppearanceBody2"
        android:textColor="?android:attr/textColorSecondary"
        app:layout_constraintBottom_toTopOf="@+id/text_label_fp2_date"
        app:layout_constraintStart_toStartOf="@+id/text_label_fp2_date"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_fp1_date"
        style="@style/word_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceBody2"
        android:textColor="?android:attr/textColorSecondary"
        app:layout_constraintStart_toStartOf="@+id/text_fp2_date"
        app:layout_constraintTop_toTopOf="@+id/text_label_fp1_date"
        tools:text="Fri, 7 Aug 2020 12:00:00" />

    <TextView
        android:id="@+id/text_label_fp2_date"
        style="@style/word_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/fp2"
        android:textAppearance="?attr/textAppearanceBody2"
        android:textColor="?android:attr/textColorSecondary"
        app:layout_constraintBottom_toTopOf="@+id/text_label_fp3_date"
        app:layout_constraintStart_toStartOf="@+id/text_label_fp3_date"
        app:layout_constraintTop_toBottomOf="@+id/text_label_fp1_date" />

    <TextView
        android:id="@+id/text_fp2_date"
        style="@style/word_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceBody2"
        android:textColor="?android:attr/textColorSecondary"
        app:layout_constraintStart_toStartOf="@+id/text_fp3_date"
        app:layout_constraintTop_toTopOf="@+id/text_label_fp2_date"
        tools:text="Fri, 7 Aug 2020 12:00:00" />


    <TextView
        android:id="@+id/text_label_fp3_date"
        style="@style/word_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/fp3"
        android:textAppearance="?attr/textAppearanceBody2"
        android:textColor="?android:attr/textColorSecondary"
        app:layout_constraintBottom_toTopOf="@+id/text_label_qual_date"
        app:layout_constraintStart_toStartOf="@+id/text_label_qual_date"
        app:layout_constraintTop_toBottomOf="@+id/text_label_fp2_date" />

    <TextView
        android:id="@+id/text_fp3_date"
        style="@style/word_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceBody2"
        android:textColor="?android:attr/textColorSecondary"
        app:layout_constraintStart_toStartOf="@+id/text_qual_date"
        app:layout_constraintTop_toTopOf="@+id/text_label_fp3_date"
        tools:text="Fri, 7 Aug 2020 12:00:00" />

    <TextView
        android:id="@+id/text_label_qual_date"
        style="@style/word_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/qualification"
        android:textAppearance="?attr/textAppearanceBody2"
        android:textColor="?android:attr/textColorSecondary"
        app:layout_constraintBottom_toTopOf="@+id/text_label_race_date"
        app:layout_constraintStart_toStartOf="@+id/text_label_race_date"
        app:layout_constraintTop_toBottomOf="@+id/text_label_fp3_date" />

    <TextView
        android:id="@+id/text_qual_date"
        style="@style/word_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceBody2"
        android:textColor="?android:attr/textColorSecondary"
        app:layout_constraintStart_toStartOf="@+id/text_race_date"
        app:layout_constraintTop_toTopOf="@+id/text_label_qual_date"
        tools:text="Fri, 7 Aug 2020 12:00:00" />

    <TextView
        android:id="@+id/text_label_race_date"
        style="@style/word_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/race"
        android:textAppearance="?attr/textAppearanceBody2"
        android:textColor="?android:attr/textColorSecondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image_flag"
        app:layout_constraintTop_toBottomOf="@+id/text_label_qual_date" />

    <TextView
        android:id="@+id/text_race_date"
        style="@style/word_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:textAppearance="?attr/textAppearanceBody2"
        android:textColor="?android:attr/textColorSecondary"
        app:layout_constraintStart_toEndOf="@+id/text_label_race_date"
        app:layout_constraintTop_toTopOf="@+id/text_label_race_date"
        tools:text="Fri, 7 Aug 2020 12:00:00" />


    <!--    <ImageView-->
    <!--        android:id="@+id/image_circuit_image"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="200dp"-->
    <!--        android:layout_gravity="center"-->
    <!--        android:background="@color/white"-->
    <!--        android:contentDescription="@string/location_flag"-->
    <!--        app:layout_collapseMode="parallax"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/text_circuit_name"-->
    <!--        app:srcCompat="@android:drawable/ic_popup_sync" />-->

</androidx.constraintlayout.widget.ConstraintLayout>

        